# meme_mingle

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: azure-static-web-apps-victorious-glacier-0ade75b0f.yml  main_Mememingle.yml  mememingle-AutoDeployTrigger-ed66cde5-c05a-4f7b-bbf3-abe46695db13.yml  mememinglebackend-AutoDeployTrigger-51dc33c6-d1a0-45e8-8393-d1c46353c6b4.yml
meme_mingle/: .gitignore  README.md  angular.json  package-lock.json  package.json
meme_mingle/src/: index.html  main.ts  styles.scss
meme_mingle/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  app.service.ts  auth.service.ts
meme_mingle/src/app/auth/: auth.component.html  auth.component.scss  auth.component.ts  auth.guard.ts  auth.interceptor.ts  auth.routes.ts
meme_mingle/src/app/auth/auth-callback/: auth-callback.component.html  auth-callback.component.scss  auth-callback.component.ts
meme_mingle/src/app/auth/forgot-password/: forgot-password.component.html  forgot-password.component.scss  forgot-password.component.ts
meme_mingle/src/app/auth/reset-password/: reset-password.component.html  reset-password.component.scss  reset-password.component.spec.ts  reset-password.component.ts
meme_mingle/src/app/auth/sign-in/: sign-in.component.html  sign-in.component.scss  sign-in.component.spec.ts  sign-in.component.ts
meme_mingle/src/app/auth/sign-up/: sign-up.component.html  sign-up.component.scss  sign-up.component.ts
meme_mingle/src/app/layout/aboutus/: aboutus.component.html  aboutus.component.scss  aboutus.component.ts
meme_mingle/src/app/layout/contact/: contact.component.html  contact.component.scss  contact.component.ts
meme_mingle/src/app/layout/faq/: faq.component.html  faq.component.scss  faq.component.ts
meme_mingle/src/app/live-conversation/: live-conversation.component.html  live-conversation.component.scss  live-conversation.component.ts
meme_mingle/src/app/main/: main.component.html  main.component.scss  main.component.ts  main.guard.ts  main.routes.ts
meme_mingle/src/app/styles/: variable.scss
meme_mingle/src/app/user-profile/: delete-confirmation-dialog.component.ts  user-profile.component.html  user-profile.component.scss  user-profile.component.ts  user-profile.routes.ts
meme_mingle/src/app/virtual-character/: virtual-character.component.html  virtual-character.component.scss  virtual-character.component.spec.ts  virtual-character.component.ts  virtual-character.service.ts  virtual-charecter.routes.ts
meme_mingle/src/assets/models/: new.glb
server/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  migrate_users.py  pyproject.toml  readme.md  requirements.txt
server/agents/: ai_agent.py  meme_mingle_agent.py  quiz_ai_agent.py  tool_schemas.py  tools.py
server/models/: agent_fact.py  chat_summary.py  chat_turn.py  feedback.py  quiz.py  user.py  user_journey.py  user_response.py
server/routes/: AI.py  __init__.py  auth.py  quiz_ai.py  translator.py  user_profile.py
server/services/: azure_form_recognizer.py  azure_open_ai.py  google_form_recognizer.py  google_sentiment_analyze.py  google_vertex_ai.py  speech_service.py  text_to_speech_service.py
server/services/db/: agent_facts.py  user.py  user_journey.py
server/static/female_model/: female.glb
server/tests/: conftest.py  test_update_profile_picture_success.py  user_profile_test.py
server/utils/: agents.py  consts.py  delete_generated_doc.py  docs.py  similar_answer.py  translate_decorator.py
(+50 files in other folders)
