[tool.poetry]
name = "meme mingle"
version = "0.1.0"
description = "Meme Mingle is an AI-powered educational assistant designed to support students in their learning journey."
authors = ["DHRUMIL PATEL <dpatel24@radar.gsw.edu>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.12"
pydub = "^0.25.1"
emoji = "^2.8.0"
gunicorn = "^20.1.0"
rapidfuzz = "^3.0.0"
aiohappyeyeballs = "^2.4.3"
aiohttp = "^3.11.8"
aiosignal = "^1.3.1"
annotated-types = "^0.7.0"
anyio = "^4.6.2.post1"
APScheduler = "^3.11.0"
attrs = "^24.2.0"
Authlib = "^1.3.2"
azure-ai-formrecognizer = "^3.3.3"
azure-ai-textanalytics = "^5.3.0"
azure-cognitiveservices-speech = "^1.41.1"
azure-common = "^1.1.28"
azure-core = "^1.32.0"
blinker = "^1.9.0"
cachetools = "^5.5.0"
certifi = "^2024.8.30"
cffi = "^1.17.1"
chardet = "^5.2.0"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
colorama = "^0.4.6"
cryptography = "^44.0.0"
dataclasses-json = "^0.6.7"
distro = "^1.9.0"
dnspython = "^2.7.0"
email-validator = "^2.2.0"
et_xmlfile = "^2.0.0"
filetype = "^1.2.0"
Flask = "^3.1.0"
Flask-APScheduler = "^1.13.1"
Flask-Cors = "^5.0.0"
Flask-JWT-Extended = "^4.7.1"
Flask-Mail = "^0.10.0"
frozenlist = "^1.5.0"
google-api-core = "^2.23.0"
google-api-python-client = "^2.154.0"
google-auth = "^2.36.0"
google-auth-httplib2 = "^0.2.0"
google-cloud-core = "^2.4.1"
google-cloud-translate = "^3.18.0"
googleapis-common-protos = "^1.66.0"
googlemaps = "^4.10.0"
greenlet = "^3.1.1"
grpc-google-iam-v1 = "^0.13.1"
grpcio = "^1.68.0"
grpcio-status = "^1.68.0"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httplib2 = "^0.22.0"
httpx = "^0.28.0"
httpx-sse = "^0.4.0"
idna = "^3.10"
isodate = "^0.7.2"
itsdangerous = "^2.2.0"
Jinja2 = "^3.1.4"
jiter = "^0.8.0"
jsonpatch = "^1.33.0"
jsonpointer = "^3.0.0"
langchain = "^0.3.9"
langchain-community = "^0.3.8"
langchain-core = "^0.3.21"
langchain-google-community = "^2.0.3"
langchain-mongodb = "^0.2.0"
langchain-openai = "^0.2.10"
langchain-text-splitters = "^0.3.2"
langsmith = "^0.1.147"
lxml = "^5.3.0"
MarkupSafe = "^3.0.2"
marshmallow = "^3.23.1"
mongomock = "^4.3.0"
msrest = "^0.7.1"
multidict = "^6.1.0"
mypy-extensions = "^1.0.0"
numpy = "^1.26.4"
oauthlib = "^3.2.2"
openai = "^1.55.3"
openpyxl = "^3.1.5"
orjson = "^3.10.12"
packaging = "^24.2"
pillow = "^11.0.0"
propcache = "^0.2.0"
proto-plus = "^1.25.0"
protobuf = "^5.29.0"
pyasn1 = "^0.6.1"
pyasn1-modules = "^0.4.1"
pycparser = "^2.22"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
pydantic_core = "^2.27.1"
PyJWT = "^2.10.1"
pymongo = "^4.10.1"
pyparsing = "^3.2.0"
python-dateutil = "^2.9.0"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"
python-pptx = "^1.0.2"
pytz = "^2024.2"
PyYAML = "^6.0.2"
regex = "^2024.11.6"
reportlab = "^4.2.5"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
requests-toolbelt = "^1.0.0"
rsa = "^4.9"
sentinels = "^1.0.0"
six = "^1.16.0"
sniffio = "^1.3.1"
SQLAlchemy = "^2.0.35"
tenacity = "^9.0.0"
tiktoken = "^0.8.0"
tqdm = "^4.67.1"
typing-inspect = "^0.9.0"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
tzlocal = "^5.2"
uritemplate = "^4.1.1"
urllib3 = "^2.2.3"
Werkzeug = "^3.1.3"
XlsxWriter = "^3.2.0"
yarl = "^1.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.1"
pytest-env = "1.1.3"


[tool.pytest.ini_options]
env = [
    "log_cli = true",
    "log_cli_level = INFO",
    "FLASK_ENV = dev",
    "cache_dir = ./server"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"